# dead-frontier-2-web-scraper

./: README.md  index.html  main.py  pistol_names.json  pyproject.toml
