[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Zykie Rallos <zykie1018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.2"
selectolax = "^0.3.17"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
